# atria

./: .clang-format  .clang-tidy  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  meson.build  meson.options
benchmarks/: README.md  baseline.json  bench_json.cpp  bench_parser.cpp  bench_router.cpp  check_against_baseline.py  meson.build  timer.hpp
examples/di_api/: README.md  main.cpp  meson.build
examples/todo_api/: README.md  main.cpp  meson.build
examples/upnp_skeleton/: main.cpp  meson.build
examples/websocket_chat/: README.md  main.cpp  meson.build
include/: meson.build
include/atria/: application.hpp  atria.hpp  headers.hpp  json.hpp  method.hpp  middleware.hpp  network_error.hpp  network_interface.hpp  openapi.hpp  parser.hpp  periodic_timer.hpp  range.hpp  request.hpp  response.hpp  route_builder.hpp  route_meta.hpp  router.hpp  server_config.hpp  status.hpp  udp.hpp  url.hpp  validation.hpp  websocket.hpp
src/: meson.build
src/application/: application.cpp  websocket.cpp
src/http/: headers.cpp  method.cpp  parser.cpp  range.cpp  request.cpp  response.cpp  status.cpp  url.cpp
src/json/: json.cpp
src/middleware/: builtins.cpp
src/net/: connection.cpp  connection.hpp  event_loop.hpp  event_loop_epoll.cpp  event_loop_kqueue.cpp  event_loop_poll.cpp  network_interface.cpp  notifier.cpp  notifier.hpp  periodic_timer.cpp  server_runtime.cpp  server_runtime.hpp  tcp_listener.cpp  tcp_listener.hpp  udp_socket.cpp  websocket_protocol.cpp  websocket_protocol.hpp  worker_pool.cpp  worker_pool.hpp
src/platform/: socket.hpp
src/platform/posix/: posix_socket.cpp
src/platform/windows/: windows_socket.cpp
src/routing/: router.cpp
src/validation/: validator.cpp
subprojects/: ctorwire.wrap  logspine.wrap
tests/: meson.build  test_connection_limits.cpp  test_http_parser.cpp  test_http_parser_fuzz.cpp  test_integration.cpp  test_json.cpp  test_middleware.cpp  test_openapi.cpp  test_response.cpp  test_router.cpp  test_streaming.cpp  test_url.cpp  test_websocket.cpp  test_worker_pool.cpp
tests/fuzz/: README.md  fuzz_http_parser.cpp  fuzz_router.cpp  fuzz_standalone_main.cpp  fuzz_url_path.cpp  fuzz_websocket_frame.cpp  meson.build
tests/fuzz/corpus/http-parser/: basic-get  chunked  encoded-separator  encoded-traversal  invalid-escape
tests/fuzz/corpus/router/: encoded-separator  encoded-traversal  path-param
tests/fuzz/corpus/url-path/: backslash  encoded-traversal  truncated-escape
tests/fuzz/corpus/websocket-frame/: masked-text  rsv  unmasked-text
tests/integration/: test_connection_limits.cpp  test_integration.cpp  test_runtime_chaos.cpp  test_udp.cpp  test_websocket.cpp  test_worker_pool.cpp
tests/unit/: test_http_parser.cpp  test_json.cpp  test_periodic_timer.cpp  test_range.cpp  test_response.cpp  test_router.cpp  test_router_root.cpp  test_url.cpp  test_validation.cpp
