executable(
  'atria-bench-router',
  files('bench_router.cpp'),
  include_directories: atria_inc,
  dependencies: [atria_dep],
)

executable(
  'atria-bench-json',
  files('bench_json.cpp'),
  include_directories: atria_inc,
  dependencies: [atria_dep],
)

executable(
  'atria-bench-parser',
  files('bench_parser.cpp'),
  include_directories: atria_inc,
  dependencies: [atria_dep],
)
